--- a/VECTORSTORE-AGENT/package.json
+++ b/VECTORSTORE-AGENT/package.json
@@ -2,10 +2,10 @@
   "name": "vectorstore-agent",
   "version": "1.0.0",
   "description": "",
-  "main": "index.ts",
+  "main": "index.js",
   "scripts": {
     "dev": "ts-node src/index.ts",
-    "start:prod": "node dist/index.js",
+    "start": "npm run build && node dist/index.js",
     "build": "tsc -p ."
   },
   "type": "module",
@@ -14,10 +14,12 @@
   "license": "ISC",
   "dependencies": {
     "dotenv": "^16.3.1",
-    "langchain": "^0.0.129"
+    "langchain": "^0.0.129",
+    "ts-node-dev": "^2.0.0"
   },
   "devDependencies": {
-    "ts-node": "^10.4.0",
+    "ts-node": "^10.9.1",
+    "tsconfig-paths": "^4.2.0",
     "typescript": "^4.4.4"
   }
 }
