--- a/SQL-AGENTS/package.json
+++ b/SQL-AGENTS/package.json
@@ -13,6 +13,7 @@
   "license": "ISC",
   "dependencies": {
     "dotenv": "^16.3.1",
+    "express": "^4.18.2",
     "langchain": "^0.0.127",
     "sqlite3": "^5.1.6",
     "typeorm": "^0.3.17"
